force-app/main/default/objects/OpportunityLineItem/fields/AFP_Percent__c.field-meta.xml
<CustomField>
    <fullName>AFP_Percent__c</fullName>
    <label>AFP %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>