force-app/main/default/objects/OpportunityLineItem/fields/AFP_Val__c.field-meta.xml
<CustomField>
    <fullName>AFP_Val__c</fullName>
    <formula>AFP_Percent__c  *   Price_With_GP__c</formula>
    <label>AFP Val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>