force-app/main/default/objects/OpportunityLineItem/fields/Bundle_Price_With_TAX__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Price_With_TAX__c</fullName>
    <formula>(  Bundle_price_Without_TAX__c +  NBT_Amount__c +  SSLT_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Price With TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>