force-app/main/default/objects/OpportunityLineItem/fields/Bundle_price_Without_TAX__c.field-meta.xml
<CustomField>
    <fullName>Bundle_price_Without_TAX__c</fullName>
    <formula>AFP_Val__c + PFP_Val__c + Price_With_GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle price Without TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>