force-app/main/default/objects/OpportunityLineItem/fields/Engraving_Tags_With_Legend_Plates_Amount__c.field-meta.xml
<CustomField>
    <fullName>Engraving_Tags_With_Legend_Plates_Amount__c</fullName>
    <formula>Engraving_Tags_With_Legend_Plates__c *  Engraving_Tags_With_Legend_Plates_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engraving Tags With Legend Plates Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>