force-app/main/default/objects/OpportunityLineItem/fields/Error_Occured__c.field-meta.xml
<CustomField>
    <fullName>Error_Occured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Occured</label>
    <type>Checkbox</type>
</CustomField>