force-app/main/default/objects/OpportunityLineItem/fields/Final_Bundle_Price_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Final_Bundle_Price_with_VAT__c</fullName>
    <label>Final Bundle Price with VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>