force-app/main/default/objects/OpportunityLineItem/fields/Final_Bundle_price_with_VAT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Final_Bundle_price_with_VAT_Quantity__c</fullName>
    <formula>Final_Bundle_Price_with_VAT__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bundle price with VAT &amp; Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>