force-app/main/default/objects/OpportunityLineItem/fields/FOC_Added__c.field-meta.xml
<CustomField>
    <fullName>FOC_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC Added</label>
    <type>Checkbox</type>
</CustomField>