force-app/main/default/objects/OpportunityLineItem/fields/FOC_Product__c.field-meta.xml
<CustomField>
    <fullName>FOC_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC Product</label>
    <type>Checkbox</type>
</CustomField>