force-app/main/default/objects/OpportunityLineItem/fields/Free_Item__c.field-meta.xml
<CustomField>
    <fullName>Free_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Item</label>
    <type>Checkbox</type>
</CustomField>