force-app/main/default/objects/OpportunityLineItem/fields/Govt_Entity__c.field-meta.xml
<CustomField>
    <fullName>Govt_Entity__c</fullName>
    <defaultValue>85</defaultValue>
    <label>Govt Entity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>