force-app/main/default/objects/OpportunityLineItem/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <defaultValue>0.32</defaultValue>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>