force-app/main/default/objects/OpportunityLineItem/fields/Gross_Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Amount__c</fullName>
    <formula>Price_without_GP__c * ( Gross_Profit__c  / (100-Gross_Profit__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>