force-app/main/default/objects/OpportunityLineItem/fields/NBT__c.field-meta.xml
<CustomField>
    <fullName>NBT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NBT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>