force-app/main/default/objects/OpportunityLineItem/fields/NBT_Amount__c.field-meta.xml
<CustomField>
    <fullName>NBT_Amount__c</fullName>
    <formula>NBT__c *  Bundle_price_Without_TAX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>