force-app/main/default/objects/OpportunityLineItem/fields/PFP_Percent__c.field-meta.xml
<CustomField>
    <fullName>PFP_Percent__c</fullName>
    <label>PFP %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>