force-app/main/default/objects/OpportunityLineItem/fields/PFP_Val__c.field-meta.xml
<CustomField>
    <fullName>PFP_Val__c</fullName>
    <formula>PFP_Percent__c *   Price_With_GP__c</formula>
    <label>PFP_Val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>