force-app/main/default/objects/OpportunityLineItem/fields/Price_With_GP__c.field-meta.xml
<CustomField>
    <fullName>Price_With_GP__c</fullName>
    <formula>Price_without_GP__c  +  Gross_Profit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price With GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>