force-app/main/default/objects/OpportunityLineItem/fields/SSLT_Amount__c.field-meta.xml
<CustomField>
    <fullName>SSLT_Amount__c</fullName>
    <formula>( Bundle_price_Without_TAX__c *  SSLT__c ) * ( Govt_Entity__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSLT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>