force-app/main/default/objects/OpportunityLineItem/fields/Total_Additional_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional_Cost__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Additional Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>