force-app/main/default/objects/OpportunityLineItem/fields/TPC_Percent__c.field-meta.xml
<CustomField>
    <fullName>TPC_Percent__c</fullName>
    <label>TPC %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>