force-app/main/default/objects/OpportunityLineItem/fields/TPC_Val__c.field-meta.xml
<CustomField>
    <fullName>TPC_Val__c</fullName>
    <formula>TPC_Percent__c *  Bundle_Price_With_TAX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPC_Val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>