force-app/main/default/objects/OpportunityLineItem/fields/Transport_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transport_Amount__c</fullName>
    <formula>Transport_Charges__c *  Transport_Charges_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>