force-app/main/default/objects/OpportunityLineItem/fields/Transport_Charges__c.field-meta.xml
<CustomField>
    <fullName>Transport_Charges__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Transport Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>