force-app/main/default/objects/OpportunityLineItem/fields/Transport_Charges_Hours__c.field-meta.xml
<CustomField>
    <fullName>Transport_Charges_Hours__c</fullName>
    <label>Transport Charges Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>