force-app/main/default/objects/OpportunityLineItem/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <formula>((AFP_Val__c + PFP_Val__c + Price_With_GP__c) + (NBT__c * (AFP_Val__c + PFP_Val__c + Price_With_GP__c)) + (( (AFP_Val__c + PFP_Val__c + Price_With_GP__c) * SSLT__c ) * ( Govt_Entity__c / 100))+ (TPC_Percent__c * (AFP_Val__c + PFP_Val__c + Price_With_GP__c))) *  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>